# interactive-browser-use

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  run.py  task.md  tasks.md
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: page.tsx
frontend/src/app/: page.tsx
src/browser-use-src/: pyproject.toml
src/browser_agent/: __init__.py  agent.py  cli.py
src/browser_agent/utils/: chrome.py  screenshot.py
src/browser_agent/web/: __init__.py  app.py  routes.py  run.py
src/browser_agent/web/static/: app.js  index.html  styles.css
src/browser_agent/web/templates/: index.html
tests/: test_agent.py
